# ERC7579-UserOperation-Server

./: .env_sample  Cargo.toml  README.md
src/: consts.rs  errors.rs  main.rs  traits.rs  types.rs  uo_builder.rs  userop_middleware.rs  utils.rs
src/abi/: Bootstrap.json  EntryPoint.json  MSABasic.json  MSAFactory.json  SimpleAccount.json  SimpleAccountFactory.json
src/primitives/: codec.rs  mod.rs  user_operation.rs  utils.rs
