[package]
name = "erc7579-useroperation-server"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.1", features = ["full"] }
anyhow = "1.0.89"
async-trait = "0.1.83"
axum = "0.7.7"
dotenv = "0.15.0"
ethers = "2.0.14"
hashbrown = "0.15.0"
log = "0.4.22"
parking_lot = "0.12.3"
rand = "0.8.5"
regex = "1.11.0"
reqwest = "0.12.8"
rustc-hex = "2.1.0"
serde = "1.0.210"
serde_json = "1.0.128"
ssz_rs = "0.9.0"
thiserror = "1.0.64"
tokio = { version = "1.40", features = ["full"] }
